# pipico

./: .gitignore  LICENSE  README.md  docker-compose.yml
IR/transmitter/cpp/: CMakeLists.txt  main.cpp
hotspot/: CMakeLists.txt  Tests.cpp  Tests.sln  Tests.vcxproj  Tests.vcxproj.filters  ToDo.txt  WiFiConnector.cpp  WiFiConnector.h  common.h  interface.cpp  interface.h  main.cpp  picow_access_point.c  project.info  test.c  test.cpp  todo.txt
hotspot/Tests/: Assert.cpp  Assert.h  FormRendererTests.cpp  FormRendererTests.h  HotSpotConfigurationTests.cpp  HotSpotConfigurationTests.h  HtmlRendererTests.cpp  HtmlRendererTests.h  ITestModule.h  InputFormRendererTests.cpp  LedConfigurationTests.cpp  LedConfigurationTests.h  MockHtmlRenderer.cpp  MockHtmlRenderer.h  MockInputFormRenderer.h
hotspot/Tests/Mocks/: MockCredentialsHandler.cpp  MockCredentialsHandler.h  MockHardwareInteface.h  MockHtmlRenderer.cpp  MockHtmlRenderer.h  MockInputFormRenderer.cpp  MockInputFormRenderer.h
hotspot/Tests/TestFramework/: Assert.cpp  Assert.h  ITestModule.h  TestModule.cpp
hotspot/Tests/configurations/: HotSpotConfigurationTests.cpp  HotSpotConfigurationTests.h  LedConfigurationTests.cpp  LedConfigurationTests.h
hotspot/Tests/gpio/: GPIOTests.cpp
hotspot/Tests/ir/: ir_tcp_request_handler_tests.cpp  ir_tcp_request_handler_tests.h
hotspot/Tests/logic/: FlashManagerTests.cpp  FlashManagerTests.h
hotspot/Tests/pico_scope/: PicoScopeTests.cpp  TraceDataFormatterTests.cpp
hotspot/Tests/rest/: RestHandlerTests.cpp  RestTests.cpp  RestTests.h  TcpRequestMakerTests.cpp  TcpRequestMakerTests.h  TcpResponseAnalyserTests.cpp  TcpResponseAnalyserTests.h
hotspot/Tests/tools/: MessageLoggerTests.cpp  MessageLoggerTests.h
hotspot/configurations/: configuration.h  hotspot_configuration.cpp  hotspot_configuration.h  led_configuration.cpp  led_configuration.h  null_configuration.cpp  null_configuration.h
hotspot/gpio/: gpio.h  gpio_input.cpp
hotspot/hotspot/: WiFiConnector.cpp  WiFiConnector.h  c_interface.h  flash_hardware.cpp  flash_hardware.h  flash_program.c  flash_program.h  logic.c  logic.h  pico_logic.c  pico_logic.h  picow_access_point.c  picow_access_point.h  system_interface.c  system_interface.h
hotspot/hotspot/low_level/: flash_program.c  flash_program.h  picow_access_point.c
hotspot/hw_if/: hardware_interface.c  hardware_interface.cpp  hardware_interface.h  hardware_interface.hpp  pico_hardware_interface.cpp  pico_hardware_interface.h  picow_tcp_client.c  picow_tcp_client.h
hotspot/interface/: interface.cpp  interface.h  logging.cpp  system_interface.c  system_interface.h
hotspot/ir/: infrared_tcp_request_handler.cpp  infrared_tcp_request_handler.h  ir_code_repository.cpp  ir_code_repository.h  ir_main.cpp  ir_main.h  ir_tcp_request_handler.cpp  ir_tcp_request_handler.h
hotspot/ir/codes/: ir_code_repository.cpp  ir_code_repository.h
hotspot/ir/server/: http_request_router.cpp  http_request_router.h  http_response_packager.cpp  http_response_packager.h  http_server_home_handler.cpp  http_server_home_handler.h  http_server_record_handler.cpp  http_server_record_handler.h  ihttp_request_handler.h  ihttp_request_router.h
hotspot/ir/server_responses/: codes_display_request_handler.cpp  codes_display_request_handler.h  codes_record_request_handler.cpp  codes_record_request_handler.h
hotspot/logic/: flash_manager.cpp  flash_manager.h  html_renderer.cpp  html_renderer.h  ihtml_renderer.h
hotspot/logic/connecting/: wifi_connection_maker.cpp  wifi_connector.cpp  wifi_connector.h
hotspot/logic/credentials/: credentials_handler.cpp  credentials_handler.h  icredentials_handler.h  percent_decoder.cpp  percent_decoder.h
hotspot/logic/flash/: flash_hardware.cpp  flash_hardware.h  flash_manager.cpp  flash_manager.h  logging.h  message_logger.cpp  message_logger.h
hotspot/logic/input_form/: ihtml_renderer.h  iinput_form_renderer.h  input_form_renderer.cpp
hotspot/logic/requests/: hotspot_configuration.cpp  process_request.cpp  process_request.h
hotspot/pico_scope/: pico_scope.cpp  pico_scope.h  pico_scope_configuration.h  pico_scope_main.cpp  pico_scope_main.h  pico_scope_record_and_post.cpp  pico_scope_record_and_post.h  pico_scope_trace.cpp  trace_data_formatter.cpp
hotspot/rest/: iresthandler.h  itcpresponseanalyser.h  picow_tcp_client.c  response_processor.cpp  response_processor.h  rest.cpp  rest.h  rest_handler.cpp  rest_handler.h  resthandler.cpp  resthandler.h  tcp_request_error_logger.h  tcp_request_maker.cpp  tcp_request_maker.h  tcp_response_analyser.cpp  tcp_response_analyser.h  tcpresponseanalyser.cpp  tcpresponseanalyser.h
hotspot/tcp_server/: tcp_server.c  tcp_server.h
hotspot/tools/: hex_dump.cpp  hex_dump.h  message_logger.h
hotspot/work/: gpiotest.c  gpiotest.h  hardware_interface.c  hardware_interface.cpp  hardware_interface.h  hardware_interface.hpp  picow_tcp_client.c  picow_tcp_client.h  system.h  work.c  work.cpp  work.h  worker.h
hotspot/work/gpio/: gpio.cpp  gpio.h
libraries/rest/example/: CMakeLists.txt  main.cpp  readme.txt
libraries/wificonnector/: CMakeLists.txt  wificonnector.pc.in
libraries/wificonnector/src/: wificonnector.cpp
picoscope/trace_capture/: CMakeLists.txt  main.cpp
picoscope/trace_capture/ScopeTraceCaptureTests/: ScopeTraceCaptureTests.cpp  ScopeTraceCaptureTests.sln  ScopeTraceCaptureTests.vcxproj  ScopeTraceCaptureTests.vcxproj.filters
picoscope/trace_capture/hw_if/: ihardware_interface.h  picow_tcp_client.h  (+3 more)
temperature/lib/: CMakeLists.txt
temperature/src/: CMakeLists.txt  main.cpp
temperature/wificonnector/: CMakeLists.txt  wificonnector.cpp  wificonnector.h
web_button/: CMakeLists.txt  main.cpp  project.info
web_button/hw_if/: hardware_interface.c  hardware_interface.h  pico_hardware_interface.cpp  picow_tcp_client.c  picow_tcp_client.h  pins_changed_data.h  readme.txt
web_button/rest/: pico_tcp_client.cpp  pico_tcp_client.h  picow_tcp_client.h  rest_handler.cpp  rest_library.cpp  rest_library.h  tcp_request_maker.cpp  tcp_response_analyser.cpp
web_button/wifi/: hotspot_request_router.cpp
(+591 files in other folders)
